traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:3: error: not found: value positionTest
  while (positionTest()==false){
         ^