traversal.zigzag.traversalzigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int=0
  ecritMessage(cpt)
  while (positionTest()==false){
    parcours()
    cpt+=1
    ecritMessage(cpt)
    verif()   
    
  }
  
  
}



def parcours(){
  var x:Int=0
  var y:Int=0

  x=getX()
  y=getY()
  
  droite()    
  if (estFaceMur==false){
    setPos(x+1,y)
    
  }else if (estFaceMur()==true){
    setPos(x+1,y)
  }
  
}

def verif():Boolean={
  droite()
  if (estFaceMur()==true){
    droite()
    if(estFaceMur()==true){
      gauche()
      gauche()
      return true
    }
    gauche()
    gauche()
    return false
  }
  gauche()
  gauche()
  return false
  
  
}
  
